# FINAL_MPFE

./: .env.example  .gitignore  DEPLOY.md  INTEGRATION.md  README.md  docker-compose.yml  package.json  partie-b-test-plan.md  partie-b-test-results.md  pnpm-lock.yaml  test-plan.md  tsconfig.json
.agents/skills/deploying-final-mpfe/: SKILL.md
.agents/skills/testing-final-mpfe/: SKILL.md
.agents/skills/testing-stop-flow/: SKILL.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .eslintrc.cjs  Dockerfile  package.json  railway.toml  tsconfig.json
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/api/src/agents-v2/: agents-v2.module.ts  deepagent.service.ts
apps/api/src/cache/: cache.service.ts
apps/api/src/chat/: chat.controller.ts  chat.module.ts  data-stream.ts  token-pacer.test.ts  token-pacer.ts
apps/api/src/config/: app-config.module.ts  app-config.service.ts  llm-config.service.ts
apps/api/src/graph/: graph.module.ts  graph.service.ts  state.test.ts  state.ts
apps/api/src/runs/: event-log.service.ts  run-recorder.service.ts  run-registry.service.ts  run-stream.service.ts  run-worker.service.ts  runs.module.ts
apps/api/src/supabase/: supabase.module.ts  supabase.service.ts
apps/api/src/threads/: activities.controller.ts  curriculum-context.test.ts  curriculum-context.ts  entities.service.ts  scoped-generate.service.ts  syllabuses.controller.ts  threads.controller.ts  threads.module.ts  threads.service.ts  unities.controller.ts
apps/mcp-supabase/: Dockerfile  README.md  pyproject.toml  railway.toml
apps/mcp-supabase/src/mpfe_mcp_supabase/: __init__.py  embeddings.py  server.py
apps/web/: Dockerfile  next.config.js  package.json  railway.toml  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/agents/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/manual/: page.tsx
apps/web/components/: contract-chips.tsx  file-tree.tsx  viewer.tsx
apps/web/lib/: agent-run-realtime.ts  artifact-card.ts  realtime.ts  scoped-generate-sse.ts  ui-message.ts
apps/web/stores/: agent-store.ts
db/migrations/: 0001_init.sql  0002_replica_identity_full.sql  0003_agent_runs_events.sql  0004_agent_runs_realtime.sql  0005_pedagogical_contract.sql  0006_lesson_review_clear.sql  0007_agents_and_activities.sql  0008_agent_events_thread_recent.sql  0009_lesson_critic_issues.sql  0010_thread_list_signature_idx.sql  0011_drop_agent_events_realtime.sql  0012_lesson_depends_on.sql  0013_rename_chapters_to_unities.sql  0014_extend_activities_for_unities.sql  0015_enable_pgvector_and_embeddings.sql  0016_legacy_chapters_view.sql
docs/: architecture.md  test-plan-pr1.md  test-plan-pr3.md  test-plan-pr4.md  test-plan-pr7.md  test-report-pr3.md  test-report-pr4.md
docs/pfe/: 00-history.md  01-audit.md  04-chapter.tex  README.md
docs/pfe/02-optimizations/: 01-hydration.md  02-parallel-research.md  03-critic-tier.md  04-intake-dedup.md  05-research-sources.md  06-quick-wins.md  07-writer-recovery.md  08-fe-perf.md  09-token-streaming.md  10-ai-sdk-v5.md
rapport/: chapter2-changelog.md  compile.bat  compile.sh  main.tex  references.bib
rapport/chapters/: chapter0.tex  chapter1.tex  chapter2.tex  chapter3.tex
rapport/frontmatter/: abstract_en.tex  abstract_fr.tex  acknowledgements.tex  acronyms.tex  conclusion.tex  cover.tex  dedication.tex
scripts/: backfill-activity-embeddings.ts  db-push.ts  db-query.ts  indexing-verify.py  smoke-test.sh
(+61 files in other folders)
