[project]
name = "mpfe-mcp-supabase"
version = "0.1.0"
description = "MCP server exposing read-only Supabase access for the activity-generator-tooled agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastMCP is the high-level MCP server framework that ships with the
    # official Python SDK; it gives us a decorator-based @mcp.tool() API
    # over the lower-level mcp.server primitives.
    "mcp[cli]>=1.2.0",
    # supabase-py speaks the PostgREST + Realtime APIs; we only use the
    # PostgREST side here. Pinned to 2.x for the typed `.execute()`
    # response object.
    "supabase>=2.7.0",
    "python-dotenv>=1.0.0",
    # CPU-only PyTorch + sentence-transformers powers the local 384-d
    # `all-MiniLM-L6-v2` embedding model used by the find_related_*
    # retrieval tools. We pin to torch 2.6.0 because that's the
    # newest CPU-only build available on download.pytorch.org/whl/cpu;
    # newer versions on PyPI ship with CUDA libs and balloon the image
    # from ~1 GB to ~11 GB, breaking Railway's deploy phase. Pin
    # sentence-transformers to a version that supports torch 2.6.
    "torch==2.6.0",
    "sentence-transformers>=3.0.0,<4.0.0",
]

[project.scripts]
# stdio entrypoint. The api spawns this script as a child process and
# pipes JSON-RPC frames over stdin/stdout.
mpfe-mcp-supabase = "mpfe_mcp_supabase.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpfe_mcp_supabase"]

[tool.hatch.metadata]
allow-direct-references = true

# Route torch + friends through the PyTorch CPU wheel index so we
# don't drag in CUDA (~3 GB of NVIDIA libs) on Linux. Without this,
# the resulting image is ~10 GB and crashes Railway's deploy phase.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
